--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.3.0",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
