--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^14.2.15",
     "daisyui": "^4.12.10",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
