--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -14,12 +14,13 @@
     "eslint-config-next": "13.0.5",
     "firebase": "^10.13.0",
     "lucide-react": "^0.483.0",
-    "next": "13.0.5",
+    "next": "15.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
+    "@types/react": "19.1.4",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4"
