--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "zustand": "^4.5.5"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.19",
     "@types/react": "19.1.4",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
