--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "eslint-config-next": "13.0.5",
     "firebase": "^10.13.0",
     "lucide-react": "^0.483.0",
-    "next": "15.3.8",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "zustand": "^4.5.5"
+    "next": "16.1.6",
+    "nuqs": "^2.8.8",
+    "react": "19.2.4",
+    "react-dom": "19.2.4",
+    "use-sync-external-store": "^1.6.0",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.19",
